--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "place-my-order-assets",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "description": "Styles and images for place-my-order.com.",
   "main": "less/styles.less!",
   "repository": {
@@ -20,7 +20,7 @@
   "homepage": "https://github.com/donejs/place-my-order-assets",
   "system": {
     "map": {
-      "bit-tabs/tabs.less!$less": "./@empty"
+      "bit-tabs/tabs.less!$less": "@empty"
     }
   }
 }
