--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "place-my-order-assets",
-  "version": "0.2.0-0",
+  "version": "0.2.0",
   "description": "Styles and images for place-my-order.com.",
   "main": "less/styles.less!",
   "repository": {
